# emeraude-base

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  format-code.json
cmake/: InstallDependencies.cmake  PrepareBaseSourceFiles.cmake
docs/: ai_documentation_map.md  integration.md  module-map.md
resources/assets/: tmp_writeTarga.tga
src/: AGENTS.md  BaseUtility.hpp  BlobTrait.hpp  FastJSON.cpp  FastJSON.hpp  FileTimestamps.cpp  FileTimestamps.hpp  FlagArrayTrait.hpp  FlagTrait.hpp  KVParser.cpp  KVParser.hpp  NameableTrait.hpp  NodeTrait.hpp  ObservableTrait.cpp  ObservableTrait.hpp  ObserverTrait.cpp  ObserverTrait.hpp  Randomizer.hpp  SourceCodeParser.cpp  SourceCodeParser.hpp  StaticVector.hpp  String.cpp  String.hpp  ThreadPool.cpp  ThreadPool.hpp  TokenFormatter.cpp  TokenFormatter.hpp  Utility.hpp  Variant.cpp  Variant.hpp  Version.hpp  emeraude_base_config.hpp.in  emeraude_platform.hpp  std_source_location.hpp
src/Algorithms/: DelaunayTriangulation.hpp  DiamondSquare.hpp  Mandelbrot.hpp  PerlinNoise.hpp  VoronoiNoise.hpp
src/Animation/: AnimationChannel.hpp  AnimationClip.hpp  Joint.hpp  MD5AnimParser.hpp  Skeleton.hpp  Skin.hpp
src/Compression/: LZMA.cpp  LZMA.hpp  ZLIB.cpp  ZLIB.hpp
src/Compression/LZMA/: Compressor.cpp  Compressor.hpp  Decompressor.cpp  Decompressor.hpp
src/Debug/: ConcurrencyDetector.hpp  Dummy.hpp  Statistics.cpp  Statistics.hpp
src/GameTools/: CardDeck.cpp  CardDeck.hpp  CardHand.hpp  Dice.hpp
src/Hash/: CRC32.cpp  CRC32.hpp  FNV1a.hpp  Hash.cpp  Hash.hpp  MD5.cpp  MD5.hpp  SHA256.cpp  SHA256.hpp  SHA512.cpp  SHA512.hpp  Types.hpp
src/IO/: ByteStream.hpp  FileStream.hpp  IO.cpp  IO.hpp  MemoryStream.hpp  ZipReader.cpp  ZipReader.hpp  ZipWriter.cpp  ZipWriter.hpp
src/Math/: BSpline.hpp  Base.hpp  BezierCurve.hpp  CartesianFrame.hpp  DeterminantAverage.hpp  LineFormula.hpp  Matrix.hpp  OrientedCuboid.hpp  Plane.hpp  Quaternion.hpp  Range.hpp  TransformUtils.hpp  Vector.hpp
src/Math/Space2D/: AARectangle.hpp  Circle.hpp  Line.hpp  Point.hpp  SAT.hpp  Segment.hpp  Triangle.hpp
src/Math/Space2D/Collisions/: CircleRectangle.hpp  PointCircle.hpp  PointRectangle.hpp  PointSegment.hpp  PointTriangle.hpp  SamePrimitive.hpp  TriangleCircle.hpp  TriangleRectangle.hpp
src/Math/Space2D/Intersections/: LineCircle.hpp  LineLine.hpp  LineRectangle.hpp  LineTriangle.hpp  SegmentCircle.hpp  SegmentRectangle.hpp  SegmentSegment.hpp  SegmentTriangle.hpp
src/Math/Space3D/: AACuboid.hpp  Capsule.hpp  Line.hpp  Point.hpp  SAT.hpp  Segment.hpp  Sphere.hpp  Triangle.hpp
src/Math/Space3D/Collisions/: CapsuleCuboid.hpp  CapsulePoint.hpp  CapsuleSphere.hpp  CapsuleTriangle.hpp  PointCuboid.hpp  PointSphere.hpp  PointTriangle.hpp  SamePrimitive.hpp  SphereCuboid.hpp  TriangleCuboid.hpp  TriangleSphere.hpp
src/Math/Space3D/Intersections/: LineCapsule.hpp  LineCuboid.hpp  LineLine.hpp  LineSphere.hpp  LineTriangle.hpp  SegmentCapsule.hpp  SegmentCuboid.hpp  SegmentSegment.hpp  SegmentSphere.hpp  SegmentTriangle.hpp
src/Network/: HTTPHeaders.cpp  HTTPHeaders.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  Hostname.cpp  Hostname.hpp  Network.cpp  Network.hpp  Query.cpp  Query.hpp  URI.cpp  URI.hpp  URIDomain.cpp  URIDomain.hpp  URL.hpp  asio_throw_exception.hpp
src/PixelFactory/: Color.hpp  DefaultFont.hpp  FileFormatInterface.hpp  FileFormatJpeg.hpp  FileFormatPNG.hpp  FileFormatTarga.hpp  FileIO.hpp  Font.hpp  Gradient.hpp  IOCommon.hpp  Margin.hpp  Pixmap.hpp  Processor.hpp  StreamIO.hpp  TextProcessor.hpp  Types.hpp
src/Testing/: AGENTS.md  Constants.hpp  main.cpp  test_Compression.cpp  test_Hash.cpp  test_LineFormula.cpp  test_MathBasics.cpp  test_MathCartesianFrame.cpp  test_MathMatrix.cpp  test_MathQuaternion.cpp  test_MathSpace2D.cpp  test_MathSpace3D.cpp  test_MathTransformConversions.cpp  test_MathVector.cpp  test_NodeTrait.cpp  test_ObserverPattern.cpp  test_PixelFactoryColor.cpp  test_PixelFactoryPixmap.cpp  test_PixelFactoryPixmapFormat.cpp  test_PixelFactoryProcessor.cpp  test_PixelFactoryTextPixmap.cpp  test_StaticVector.cpp  test_String.cpp  test_ThreadPool.cpp  test_TokenFormatter.cpp  test_Version.cpp
src/Time/: EventTrait.hpp  Time.hpp  TimedEvent.hpp  Types.hpp
src/Time/Elapsed/: Abstract.hpp  CPUTime.hpp  PrintScopeCPUTime.hpp  PrintScopeRealTime.hpp  RealTime.hpp  ScopeCPUTime.hpp  ScopeRealTime.hpp
src/Time/Statistics/: Abstract.cpp  Abstract.hpp  CPUTime.cpp  CPUTime.hpp  RealTime.hpp
src/VertexFactory/: CapUVMapping.hpp  FileFormatInterface.hpp  FileFormatMDx.hpp  FileFormatNative.hpp  FileFormatOBJ.hpp  FileFormatSTL.hpp  FileIO.hpp  Grid.hpp  GridQuad.hpp  Normal.hpp  Shape.hpp  ShapeAssembler.hpp  ShapeBuilder.hpp  ShapeBuilderOptions.hpp  ShapeDecimator.hpp  ShapeEdge.hpp  ShapeGenerator.hpp  ShapeLoadResult.hpp  ShapeProcessor.hpp  ShapeSplitter.hpp  ShapeTriangle.hpp  ShapeVertex.hpp  Silhouette.hpp  StreamIO.hpp  TextureCoordinates.hpp  TreeGenerator.cpp  TreeGenerator.hpp  TriangleGenerator.hpp  Types.hpp  XRayAnalyzer.hpp
src/WaveFactory/: FileFormatInterface.hpp  FileFormatJSON.hpp  FileFormatMIDI.hpp  FileFormatSNDFile.hpp  FileIO.hpp  Processor.cpp  Processor.hpp  SFXScript.hpp  StreamIO.hpp  Synthesizer.hpp  Types.hpp  Wave.hpp
